@@ -1,3 +1,7 @@
+2010-05-12  Oliver Hader  <oliver@typo3.org>
+
+	* Fixed bug: Replaced deprecated t3lib_div::makeInstanceClassName() calls
+
 2010-05-05  Oliver Hader  <oliver@typo3.org>
 
 	* Set compatibility to TYPO3 4.3
